rnsc/tests/snapshots/error-lexer-integers-invalid_format_letters.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code 123abc
----- STDERR -----
[E-003] Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/invalid_format_letters.rns:2:7 ]
   │
 2 │ .code 123abc
   │       ───┬──  
   │          ╰──── '123abc' contains invalid characters
   │ 
   │ Help: Integers must be between -2147483648 and 2147483647 to fit in a 32-bit signed integer.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-003
───╯
----- HASH -----
not generated
