rnsc/tests/snapshots/error-lexer-integers-invalid_format_mixed.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 12a34
----- STDERR -----
[E-003] Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/invalid_format_mixed.rns:1:7 ]
   │
 1 │ .code 12a34
   │       ──┬──  
   │         ╰──── '12a34' contains invalid characters
   │ 
   │ Help: Integers can only contain digits and an optional leading minus sign.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-003
───╯
----- HASH -----
not generated
