rnsc/tests/snapshots/error-lexer-integers-invalid_negative_format.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code -5xyz
----- STDERR -----
[E-003] Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/invalid_negative_format.rns:2:7 ]
   │
 2 │ .code -5xyz
   │       ──┬──  
   │         ╰──── '-5xyz' contains invalid characters
   │ 
   │ Help: Integers can only contain digits and an optional leading minus sign.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-003
───╯
----- HASH -----
not generated
