rnsc/tests/snapshots/error-lexer-integers-minus_only.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code -
----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/minus_only.rns:1:7 ]
   │
 1 │ .code -
   │       ┬  
   │       ╰── '-' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
