rnsc/tests/snapshots/error-lexer-integers-overflow_positive.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 99999999999999999999
----- STDERR -----
[E-003] Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/overflow_positive.rns:1:7 ]
   │
 1 │ .code 99999999999999999999
   │       ──────────┬─────────  
   │                 ╰─────────── integer '99999999999999999999' is too large for a 32-bit signed integer
   │ 
   │ Help: Integers must be between -2147483648 and 2147483647 to fit in a 32-bit signed integer.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-003
───╯
----- HASH -----
not generated
