rnsc/tests/snapshots/error-lexer-quoted_identifiers-basic_unterminated_string.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with no ending quote
.class_end
----- STDERR -----
[E-001] Error: unterminated quoted identifier
   ╭─[ test_data/rns_integration/error/lexer/quoted_identifiers/basic_unterminated_string.rns:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── this identifier is not terminated
   │ 
   │ Help: Close the identifier with a '"' on the same line.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-001
───╯
----- JAVAP -----
not generated
